CarService/target/classes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: car-mircoservices-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: cars.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: car-service
                port:
                  number: 8080
